--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.png" class="img-fluid" alt="">
+            <img src="assets/img/profile-img2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 content">
             <h2>Gameplay Programmer</h2>
@@ -117,8 +117,6 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>High School</span></li>
-                  
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Unavailable</span></li>
                 </ul>
               </div>
