--- a/project-thor-gone-to-hel.html
+++ b/project-thor-gone-to-hel.html
@@ -2,188 +2,186 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PhotoFolio Bootstrap Template - Gallery Single</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <title>PhotoFolio Bootstrap Template - Gallery Single</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/jr_logo.png" rel="icon">
+    <!-- Favicons -->
+    <link href="assets/img/jr_logo.png" rel="icon">
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: PhotoFolio
-  * Updated: May 30 2023 with Bootstrap v5.3.0
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    <!-- =======================================================
+    * Template Name: PhotoFolio
+    * Updated: May 30 2023 with Bootstrap v5.3.0
+    * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
 </head>
 
 <body>
 
     <section>
-    <div class="svg-container">
-      <div class="svg-element">
-        <object data="assets/img/bg/book.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="svg-element">
-        <object data="assets/img/bg/trees.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="svg-element">
-        <object data="assets/img/bg/game-controller.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="svg-element">
-        <object data="assets/img/bg/plant-bulb.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="svg-element">
-        <object data="assets/img/bg/puzzle-piece.svg" type="image/svg+xml"></object>
-      </div>
-      <!-- Add more SVG elements as needed -->
-    </div>
-</section>
-    
-  <!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top">
-    <div class="container-fluid d-flex align-items-center justify-content-between">
-      <div class="logo d-flex align-items-center  me-auto me-lg-0">
-          <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo"></a>
-      </div>
-    </div>
-  </header><!-- End Header -->
+        <div class="svg-container">
+            <div class="svg-element">
+                <object data="assets/img/bg/book.svg" type="image/svg+xml"></object>
+            </div>
+            <div class="svg-element">
+                <object data="assets/img/bg/trees.svg" type="image/svg+xml"></object>
+            </div>
+            <div class="svg-element">
+                <object data="assets/img/bg/game-controller.svg" type="image/svg+xml"></object>
+            </div>
+            <div class="svg-element">
+                <object data="assets/img/bg/plant-bulb.svg" type="image/svg+xml"></object>
+            </div>
+            <div class="svg-element">
+                <object data="assets/img/bg/puzzle-piece.svg" type="image/svg+xml"></object>
+            </div>
+            <!-- Add more SVG elements as needed -->
+        </div>
+    </section>
 
-  <!-- ======= Hero Section ======= -->
-<section id="hero" class="hero d-flex flex-column justify-content-center align-items-center">
-  <div class="hero-background"></div>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-6 text-center">
-        <h2><span>Thor gone to Hel</span></h2>
-        <p>2d retro sidescroller</p>
-      </div>
-    </div>
-  </div>
+    <!-- ======= Header ======= -->
+    <header id="header" class="header fixed-top">
+        <div class="container-fluid d-flex align-items-center justify-content-between">
+            <div class="logo d-flex align-items-center  me-auto me-lg-0">
+                <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo"></a>
+            </div>
+        </div>
+    </header><!-- End Header -->
+    <!-- ======= Hero Section ======= -->
+    <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center">
+        <div class="hero-background"></div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6 text-center">
+                    <h2><span>Thor gone to Hel</span></h2>
+                    <p>2d retro sidescroller</p>
+                </div>
+            </div>
+        </div>
 
-  <!-- ======= Navbar ======= -->
-  <nav id="navbar" class="navbar">
-    <ul>
-      <!-- <li><a href="index.html" class="active btn-get-started">Home</a></li> -->
-      <li><a href="projects.html" class="active btn-get-started">Projects</a></li>
-      <li><a href="about.html" class="active btn-get-started">About</a></li>
-      <li><a href="contact.html" class="active btn-get-started">Contact</a></li>
-    </ul>
-  </nav><!-- .navbar -->
-</section><!-- End Hero Section -->
-
+        <!-- ======= Navbar ======= -->
+        <nav id="navbar" class="navbar">
+            <ul>
+                <!-- <li><a href="index.html" class="active btn-get-started">Home</a></li> -->
+                <li><a href="projects.html" class="active btn-get-started">Projects</a></li>
+                <li><a href="about.html" class="active btn-get-started">About</a></li>
+                <li><a href="contact.html" class="active btn-get-started">Contact</a></li>
+            </ul>
+        </nav><!-- .navbar -->
+    </section><!-- End Hero Section -->
     <!-- ======= Gallery Single Section ======= -->
     <section id="gallery-single" class="gallery-single">
-      <div class="container">
+        <div class="container">
 
-        <div class="position-relative h-100">
-          <div class="slides-1 portfolio-details-slider swiper" style="width: 40%;">
-            <div class="swiper-wrapper align-items-center">
+            <div class="position-relative h-100">
+                <div class="slides-1 portfolio-details-slider swiper" style="width: 40%;">
+                    <div class="swiper-wrapper align-items-center">
 
-              <div class="swiper-slide">
-                <img src="assets/img/projects/thor_gone_to_hel/thor_gone_to_hel_poster.jpg" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img src="assets/img/projects/thor_gone_to_hel/thor_gone_to_hell_ingame.png" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img src="assets/img/projects/thor_gone_to_hel/thor_gone_to_hell_controller.jpg" alt="">
-              </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/thor_gone_to_hel/thor_gone_to_hel_poster.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/thor_gone_to_hel/thor_gone_to_hell_ingame.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/thor_gone_to_hel/thor_gone_to_hell_controller.jpg" alt="">
+                        </div>
+
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
 
             </div>
-            <div class="swiper-pagination"></div>
-          </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+
+            <div class="row justify-content-between gy-4 mt-4">
+
+                <div class="col-lg-8">
+                    <div class="portfolio-description">
+                        <h2>Classic arcade hammer throwing</h2>
+                        <p>
+                            This was a 2 week long group project where we had to make a "retro" arcade game inside the GXPEngine (a proprietary engine provided by the school).
+                            I worked with another programmer in this group and we split the implementation of the game evenly between us. I also made the controller that would be used to play the game using an Arduino.
+                            The controller is made from a potmeter and a button connected to an Arduino.
+                        </p>
+
+                        <h4>Synopsis:</h4>
+                        <p>
+                            Asgard is being attacked by the army of the undead. The god of thunder, Thor, went to Helheim to find Hel, the queen of the undead, and make her stop this invasion. After arriving in Helheim and fighting against more undead he will reach the throne room in which Hel will be.
+
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="portfolio-info">
+                        <h3>Project information</h3>
+                        <ul>
+                            <li><strong>Category</strong> <span>Video Game</span></li>
+                            <li><strong>Client</strong> <span>School Project</span></li>
+                            <li><strong>Project date</strong> <span>2019</span></li>
+                            <li><strong>Project URL</strong> <a href="thor-gone-to-hel.webnode.com">www.thor-gone-to-hel.webnode.com</a></li>
+                            <li><a href="thor-gone-to-hel.webnode.com" class="btn-visit align-self-start">Visit Website</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
 
         </div>
-
-        <div class="row justify-content-between gy-4 mt-4">
-
-          <div class="col-lg-8">
-            <div class="portfolio-description">
-              <h2>Classic arcade hammer throwing</h2>
-              <p>
-                This was a 2 week long group project where we had to make a "retro" arcade game inside the GXPEngine (a proprietary engine provided by the school). I worked with another programmer in this group and we split the implementation of the game evenly between us. I also made the controller that would be used to play the game using an Arduino.
-              </p>
-
-              <h4>Synopsis:</h4>
-              <p>
-                Asgard is being attacked by the army of the undead. The god of thunder, Thor, went to Helheim to find Hel, the queen of the undead, and make her stop this invasion. After arriving in Helheim and fighting against more undead he will reach the throne room in which Hel will be.
-
-            </div>
-          </div>
-
-          <div class="col-lg-3">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong> <span>Video Game</span></li>
-                <li><strong>Client</strong> <span>School Project</span></li>
-                <li><strong>Project date</strong> <span>2019</span></li>
-                <li><strong>Project URL</strong> <a href="thor-gone-to-hel.webnode.com">www.thor-gone-to-hel.webnode.com</a></li>
-                <li><a href="thor-gone-to-hel.webnode.com" class="btn-visit align-self-start">Visit Website</a></li>
-              </ul>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
     </section><!-- End Gallery Single Section -->
+    </main><!-- End #main -->
+    <!-- ======= Footer ======= -->
+    <footer id="footer" class="footer">
+        <div class="container">
+            <div class="copyright">
+                &copy; Copyright <strong><span>PhotoFolio</span></strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+                <!-- All the links in the footer should remain intact. -->
+                <!-- You can delete the links only if you purchased the pro version. -->
+                <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
+                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            </div>
+        </div>
+    </footer><!-- End Footer -->
 
-  </main><!-- End #main -->
+    <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>PhotoFolio</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+    <!--div id="preloader">
+      <div class="line"></div>
     </div>
-  </footer><!-- End Footer -->
 
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!--div id="preloader">
-    <div class="line"></div>
-  </div>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
 
 </body>
 
