--- a/projects.html
+++ b/projects.html
@@ -2,198 +2,200 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PhotoFolio Bootstrap Template - Gallery</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <title>PhotoFolio Bootstrap Template - Gallery</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/jr_logo.png" rel="icon">
+    <!-- Favicons -->
+    <link href="assets/img/jr_logo.png" rel="icon">
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <!-- Isotope JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
+    <!-- Isotope JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
 
-<!-- AOS JS -->
-<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+    <!-- AOS JS -->
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 
-<!-- Isotope library -->
-<script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+    <!-- Isotope library -->
+    <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
 
-<!-- AOS library -->
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- AOS library -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: PhotoFolio, MyPortfolio
-  * Updated: May 30 2023 with Bootstrap v5.3.0, Mar 17 2024 with Bootstrap v5.3.3
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/, https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    <!-- =======================================================
+    * Template Name: PhotoFolio, MyPortfolio
+    * Updated: May 30 2023 with Bootstrap v5.3.0, Mar 17 2024 with Bootstrap v5.3.3
+    * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/, https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
 </head>
 
 <body>
-    
+
     <section>
-    <div class="svg-container">
-      <div class="svg-element">
-        <object data="assets/img/bg/book.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="svg-element">
-        <object data="assets/img/bg/trees.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="svg-element">
-        <object data="assets/img/bg/game-controller.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="svg-element">
-        <object data="assets/img/bg/plant-bulb.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="svg-element">
-        <object data="assets/img/bg/puzzle-piece.svg" type="image/svg+xml"></object>
-      </div>
-      <!-- Add more SVG elements as needed -->
-    </div>
-</section>
-
-  <!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top">
-    <div class="container-fluid d-flex align-items-center justify-content-between">
-      <div class="logo d-flex align-items-center  me-auto me-lg-0">
-          <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo"></a>
-      </div>
-    </div>
-  </header><!-- End Header -->
-
-  <!-- ======= Hero Section ======= -->
-<section id="hero" class="hero d-flex flex-column justify-content-center align-items-center">
-  <div class="hero-background"></div>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-6 text-center">
-        <h2><span>Projects</span></h2>
-        <p>Projects I've worked on.</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- ======= Navbar ======= -->
-  <nav id="navbar" class="navbar">
-    <ul>
-      <!-- <li><a href="index.html" class="active btn-get-started">Home</a></li> -->
-      <li><a href="projects.html" class="active btn-get-started">Projects</a></li>
-      <li><a href="about.html" class="active btn-get-started">About</a></li>
-      <li><a href="contact.html" class="active btn-get-started">Contact</a></li>
-    </ul>
-  </nav><!-- .navbar -->
-</section><!-- End Hero Section -->
-
-<section class="section site-portfolio">
-  <div class="container">
-    <div class="row mb-5 align-items-center">
-      <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-        <h2>Projects</h2>
-      </div>
-      <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up">
-        <div id="filters" class="filters">
-          <a href="#" data-filter="*" class="active">All</a>
-          <a href="#" data-filter=".programming">Programming</a>
-          <a href="#" data-filter=".music">Music</a>
-          <a href="#" data-filter=".models">Models</a>
+        <div class="svg-container">
+            <div class="svg-element">
+                <object data="assets/img/bg/book.svg" type="image/svg+xml"></object>
+            </div>
+            <div class="svg-element">
+                <object data="assets/img/bg/trees.svg" type="image/svg+xml"></object>
+            </div>
+            <div class="svg-element">
+                <object data="assets/img/bg/game-controller.svg" type="image/svg+xml"></object>
+            </div>
+            <div class="svg-element">
+                <object data="assets/img/bg/plant-bulb.svg" type="image/svg+xml"></object>
+            </div>
+            <div class="svg-element">
+                <object data="assets/img/bg/puzzle-piece.svg" type="image/svg+xml"></object>
+            </div>
+            <!-- Add more SVG elements as needed -->
         </div>
-      </div>
+    </section>
+
+    <!-- ======= Header ======= -->
+    <header id="header" class="header fixed-top">
+        <div class="container-fluid d-flex align-items-center justify-content-between">
+            <div class="logo d-flex align-items-center  me-auto me-lg-0">
+                <a href="index.html"><img src="assets/img/jr_logo.png" alt="JR Logo"></a>
+            </div>
+        </div>
+    </header><!-- End Header -->
+    <!-- ======= Hero Section ======= -->
+    <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center">
+        <div class="hero-background"></div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6 text-center">
+                    <h2><span>Projects</span></h2>
+                    <p>Projects I've worked on.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- ======= Navbar ======= -->
+        <nav id="navbar" class="navbar">
+            <ul>
+                <!-- <li><a href="index.html" class="active btn-get-started">Home</a></li> -->
+                <li><a href="projects.html" class="active btn-get-started">Projects</a></li>
+                <li><a href="about.html" class="active btn-get-started">About</a></li>
+                <li><a href="contact.html" class="active btn-get-started">Contact</a></li>
+            </ul>
+        </nav><!-- .navbar -->
+    </section><!-- End Hero Section -->
+
+    <section class="section site-portfolio">
+        <div class="container">
+            <div class="row mb-5 align-items-center">
+                <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
+                    <h2>Projects</h2>
+                </div>
+                <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up">
+                    <div id="filters" class="filters">
+                        <a href="#" data-filter="*" class="active">All</a>
+                        <a href="#" data-filter=".programming">Programming</a>
+                        <a href="#" data-filter=".music">Music</a>
+                        <a href="#" data-filter=".models">Models</a>
+                    </div>
+                </div>
+            </div>
+            <div id="portfolio-grid" class="row">
+                <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
+                    <a href="project-ruimte_rommel.html" class="item-wrap fancybox">
+                        <div class="work-info">
+                            <h3>Ruimte Rommel</h3>
+                            <span>Programming</span>
+                        </div>
+                        <img class="img-fluid" src="assets/img/projects/ruimte_rommel/ruimte_rommel_logo.png">
+                        <caption style="caption-side:bottom">The Dangers Of Space Trash.</caption>
+                    </a>
+                </div>
+                <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
+                    <a href="project-pantheon-crush.html" class="item-wrap fancybox">
+                        <div class="work-info">
+                            <h3>Pantheon Crush</h3>
+                            <span>Programming</span>
+                        </div>
+                        <img class="img-fluid" src="assets/img/projects/pantheon_crush/pantheon_crush_menu.png">
+                        <caption style="caption-side:bottom">Couch Multiplayer Game.</caption>
+                    </a>
+                </div>
+                <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
+                    <a href="project-thor-gone-to-hel.html" class="item-wrap fancybox">
+                        <div class="work-info">
+                            <h3>Thor: Gone To Hel</h3>
+                            <span>Programming</span>
+                        </div>
+                        <img class="img-fluid" src="assets/img/projects/thor_gone_to_hel/thor_gone_to_hel_poster.jpg">
+                        <caption style="caption-side:bottom">2D Retro Sidescroller</caption>
+                    </a>
+                </div>
+                <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
+                    <a href="project-trip-home.html" class="item-wrap fancybox">
+                        <div class="work-info">
+                            <h3>Trip Home</h3>
+                            <span>Programming</span>
+                        </div>
+                        <img class="img-fluid" src="assets/img/projects/trip_home/trip_home_logo.jpg">
+                        <caption style="caption-side:bottom">The Dangers Of Driving Under Influence</caption>
+                    </a>
+                </div>
+                <!-- More project items -->
+            </div>
+        </div>
+    </section>
+
+    </main><!-- End #main -->
+    <!-- ======= Footer ======= -->
+    <footer id="footer" class="footer">
+        <div class="container">
+            <div class="copyright">
+                &copy; Copyright <strong><span>PhotoFolio</span></strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+                <!-- All the links in the footer should remain intact. -->
+                <!-- You can delete the links only if you purchased the pro version. -->
+                <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/, https://bootstrapmade.com/buy/?theme=MyPortfolio -->
+                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            </div>
+        </div>
+    </footer><!-- End Footer -->
+
+    <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+    <!--div id="preloader">
+      <div class="line"></div>
     </div>
-    <div id="portfolio-grid" class="row">
-      <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
-        <a href="project-ruimte_rommel.html" class="item-wrap fancybox">
-          <div class="work-info">
-            <h3>Ruimte Rommel</h3>
-            <span>Programming</span>
-          </div>
-          <img class="img-fluid" src="assets/img/projects/ruimte_rommel/ruimte_rommel_logo.png">
-        </a>
-      </div>
-      <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
-        <a href="project-pantheon-crush.html" class="item-wrap fancybox">
-          <div class="work-info">
-            <h3>Pantheon Crush</h3>
-            <span>Programming</span>
-          </div>
-          <img class="img-fluid" src="assets/img/projects/pantheon_crush/pantheon_crush_menu.png">
-        </a>
-      </div>
-      <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
-        <a href="project-thor-gone-to-hel.html" class="item-wrap fancybox">
-          <div class="work-info">
-            <h3>Pantheon Crush</h3>
-            <span>Programming</span>
-          </div>
-          <img class="img-fluid" src="assets/img/projects/thor_gone_to_hel/thor_gone_to_hel_poster.jpg">
-        </a>
-      </div>
-      <div class="item programming col-sm-6 col-md-4 col-lg-4 mb-4">
-        <a href="project-trip-home.html" class="item-wrap fancybox">
-          <div class="work-info">
-            <h3>Pantheon Crush</h3>
-            <span>Programming</span>
-          </div>
-          <img class="img-fluid" src="assets/img/projects/trip_home/trip_home_logo.jpg">
-        </a>
-      </div>
-      <!-- More project items -->
-    </div>
-  </div>
-</section>
 
-  </main><!-- End #main -->
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>PhotoFolio</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-         <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/, https://bootstrapmade.com/buy/?theme=MyPortfolio -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
-
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!--div id="preloader">
-    <div class="line"></div>
-  </div>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
